--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=ofh4Ks"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=ofh4Ks" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=9Gwiyh"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=9Gwiyh" type="text/css">
 
   
   
@@ -70,27 +70,24 @@
 	</nav>
 </section>
 
-<section data-bs-version="5.1" class="start article4 cid-uaMdxL0Ihx" id="article04-7">
-	
+<section data-bs-version="5.1" class="image3 cid-uhDfay4Wqo" id="image03-2t">
+  
 
-	
-	<div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);"></div>
+  
+  
 
-	<div class="container">
-		<div class="row justify-content-center">
-			<div class="col-12 col-md-12 col-lg-6 image-wrapper">
-				<img class="w-100" src="assets/images/whatsapp-image-2024-04-17-at-10.08.03-1.jpeg" alt="Mobirise Website Builder">
-			</div>
-			<div class="col-12 col-md-12 col-lg">
-				<div class="text-wrapper align-left">
-					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Sejarah Sekolah</strong></h1>
-					<p class="mbr-text mbr-fonts-style mb-4 display-7">SD Inpres Pidu Wacu didirikan pada tanggal 1 Oktober 1982 di desa Daha Elu, Kecamatan Umbu Ratu Nggay Barat, Kabupaten Sumba Tengah. Sekolah ini merupakan bagian dari program Inpres (Instruksi Presiden) yang bertujuan untuk memperluas akses pendidikan dasar di daerah-daerah terpencil di Indonesia. Dengan pendanaan dari pemerintah dan berada di bawah pengelolaan Dinas Pendidikan Kabupaten Sumba Tengah, SD Inpres Pidu Wacu memberikan kesempatan kepada anak-anak di Desa Daha Elu dan sekitarnya agar mendapatkan pendidikan dasar yang layak. 
-<br><br>Selama lebih dari tiga dekade, SD Inpres Pidu Wacu telah meluluskan banyak siswa yang kemudian melanjutkan pendidikan ke jenjang lebih tinggi atau berkontribusi pada perkembangan desa mereka. Meskipun menghadapi tantangan seperti keterbatasan fasilitas dan sumber daya manusia yang terlatih, semangat gotong royong dan dukungan dari pemerintah serta masyarakat setempat membantu sekolah ini terus berupaya memberikan pendidikan terbaik. Dengan komitmen yang kuat, SD Inpres Pidu Wacu berperan penting dalam membentuk masa depan anak-anak di Kecamatan Umbu Ratu Nggay Barat.<br></p>
-					
-				</div>
-			</div>
-		</div>
-	</div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-lg-10">
+        <h4 class="mbr-description mbr-fonts-style mb-3 align-center display-2">
+          <strong>Sejarah SD Inpres Pidu Wacu</strong></h4>
+        
+        <div class="image-wrapper">
+          <img class="w-100" src="assets/images/frame-2.png" alt="Mobirise Website Builder">
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
 <section data-bs-version="5.1" class="share3 cid-uccdJwjmGo" id="share3-1z">
@@ -142,7 +139,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3119756" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3119756" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com"> Website Builder Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
